--- a/digest/Cargo.toml
+++ b/digest/Cargo.toml
@@ -20,7 +20,7 @@ subtle = { version = "=2.4", default-features = false, optional = true }
 blobby = { version = "0.3", optional = true }
 
 [features]
-default = ["core-api"]
+default = ["core-api", "mac", "rand_core"]
 core-api = ["block-buffer"] # Enable Core API traits
 mac = ["subtle"] # Enable MAC traits
 rand_core = ["crypto-common/rand_core"] # Enable random key generation methods
