--- a/crypto-common/Cargo.toml
+++ b/crypto-common/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["crypto", "traits"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-generic-array = "0.14"
+generic-array = { version = "0.14.4", features = ["more_lengths"] }
 rand_core = { version = "0.6", optional = true }
 
 [features]
